admin_result_final_fix.log
  File "/home/runner/workspace/main.py", line 1168
    cursor.execute(
    ^^^^^^
SyntaxError: expected 'except' or 'finally' block
